--- a/profile_offline_resume.html
+++ b/profile_offline_resume.html
@@ -37,7 +37,7 @@
             <div class="issues-listing" data-pjax="">
               <div id="show_issue" class="js-issues-results">
                 <div id="discussion_bucket" class="clearfix">
-                  <div class="discussion-timeline js-quote-selection-container ">
+
                     <div class="timeline-comment-wrapper js-comment-container">
                       <div class="comment  timeline-comment js-comment js-task-list-container is-task-list-enabled">
                         <div class="comment-content">
@@ -47,15 +47,17 @@
 <h2>
 <a id="user-content-profile" class="anchor" href="http://localhost:6419/#profile" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Profile</h2>
 <div class="row">
-  <div class="column">
+  <div class="left_column">
     <p>
-      <a href="./profile_files/portrait.jpg" target="_blank" rel="noopener noreferrer"><img src="./profile_files/portrait.jpg" alt="portrait" width="50%/" style="max-width:100%;"></a>
+      <a href="./profile_files/portrait.jpg" target="_blank" rel="noopener noreferrer"><img src="./profile_files/portrait.jpg" alt="portrait" width="200/" style="max-width:100%; margin-left:20px"></a>
     </p>
   </div>
-  <div class="column">
-    - 표정우(Jungwoo Pyo)
-    - 1994.05.12
-    - Live As Greedy
+  <div class="right_column">
+      <p style="font-size:20px">표정우(Jungwoo Pyo)</p>
+      <p style="font-size:15px">
+      1994.05.12<br /><br /><br />
+        새로운 것에 대한 배움을 즐거움으로 삼고 있는 Machine Learning Engineer입니다.<br />
+        Live As Greedy: local optimal을 선택하다 보면 결국 global optimal에 도달하는 greedy algorithm의 풀이 방식처럼, 현재의 위치에서 최선을 다하면 결국 원하는 목표에 도달할 수 있다는 motto를 가지며 생활합니다.</p>
   </div>
 </div>
 <h2>
