--- a/profile_offline_resume.html
+++ b/profile_offline_resume.html
@@ -153,12 +153,8 @@
 <ul>
   <li>Python(Tensorflow, Pytorch)</li>
   <li>C, C++</li>
-  <li>(Blockchain)Ethereum, Quorum</li>
-  <li>Solidity</li>
-  <li>Apache Spark</li>
   <li>(RDBMS)PostgreSQL, MySQL</li>
-  <li>(NoSQL)MongoDB</li>
-  <li>Tableau</li>
+  <li>(Blockchain)Ethereum, Quorum, Solidity</li>
 </ul>
 <h2>
 <a id="user-content-publications" class="anchor" href="http://localhost:6419/#publications" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Publications</h2>
