--- a/profile_offline_resume.html
+++ b/profile_offline_resume.html
@@ -61,7 +61,8 @@
       <p style="font-size:15px">
       1994.05.12<br />
       Github: <a href="https://github.com/jw-pyo">https://github.com/jw-pyo</a><br />
-      Homepage: <a href="https://jw-pyo.github.io">https://jw-pyo.github.io</a><br /><br />
+      Homepage: <a href="https://jw-pyo.github.io">https://jw-pyo.github.io</a><br />
+      <b>* 현재 석사 졸업예정으로, 전문연구요원으로 지원할 회사를 찾고 있습니다.</b><br /><br />
       Live As Greedy: local optimal을 선택하다 보면 결국 global optimal에 도달하는 greedy algorithm의 풀이 방식처럼, 현재의 위치에서 최선을 다하면 결국 원하는 목표에 도달할 수 있다는 motto를 가지며 새로운 것에 대한 배움을 즐기는 엔지니어입니다.</p>
   </div>
 </div>
