--- a/profile_offline_resume.html
+++ b/profile_offline_resume.html
@@ -60,6 +60,8 @@
       <p style="font-size:20px">표정우(Jungwoo Pyo)</p>
       <p style="font-size:15px">
       1994.05.12<br />
+      E-mail: wjddn1801@snu.ac.kr<br />
+      H.P.  : +82-10-2681-1137<br />
       Github: <a href="https://github.com/jw-pyo">https://github.com/jw-pyo</a><br />
       Homepage: <a href="https://jw-pyo.github.io">https://jw-pyo.github.io</a><br />
       <b>* 현재 석사 졸업예정으로, 전문연구요원으로 지원할 회사를 찾고 있습니다.</b><br /><br />
